[tool.poetry]
name = "labyrinth-game-gubarev-stepan-m25563"
version = "0.1.0"
description = "Text adventure game"
authors = ["Stepan Gubarev"]
readme = "README.md"
packages = [{ include = "labyrinth_game" }]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
project = "labyrinth_game.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

